# perry_hermes

./: .envrc.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  rust_out
.github/workflows/: ci.yml  release.yml
crates/hermes-agent/: Cargo.toml
crates/hermes-agent/examples/: live_context_usage.rs  live_tool_use.rs
crates/hermes-agent/src/: compaction.rs  config.rs  lib.rs  loop_engine.rs  prompting.rs  provider_factory.rs  runtime_agent.rs  session.rs  session_registry.rs  tool_catalog.rs
crates/hermes-agent/src/context/: compressor.rs  mod.rs  pruning.rs  summary.rs
crates/hermes-agent/src/loop_engine/: agent_loop.rs  compaction.rs  compress.rs  compressor.rs  metrics.rs  mod.rs  run.rs
crates/hermes-agent/src/tools/: bash.rs  files.rs  mod.rs  skills.rs
crates/hermes-agent/src/tools/files/: mod.rs  patch.rs  policy.rs  read.rs  search.rs  write.rs
crates/hermes-agent/src/tools/skills/: linked_files.rs  list.rs  mod.rs  view.rs
crates/hermes-agent/src/tools/support/: content.rs  path.rs
crates/hermes-agent/tests/: arg_validation.rs  bash.rs  context_compression.rs  echo_loop.rs  files.rs  skills.rs  skills_injection.rs  tool_dispatch.rs  usage_metrics.rs
crates/hermes-agent/tests/common/: mod.rs
crates/hermes-agent/tests/support/: mod.rs
crates/hermes-cli/: Cargo.toml  hermes.example.toml
crates/hermes-cli/src/: cli_render.rs  config.rs  config_path.rs  ctrl_c.rs  lib.rs  main.rs  repl.rs
crates/hermes-cli/src/tui/: adapter.rs  app.rs  event.rs  history.rs  input.rs  loop_bridge.rs  mod.rs  render.rs  run.rs  shimmer.rs
crates/hermes-cli/tests/: cli_smoke.rs  tui_cancel.rs  tui_inline_history.rs  tui_input.rs  tui_loop_bridge.rs  tui_on_event.rs  tui_render.rs  tui_smoke.rs
crates/hermes-core/: Cargo.toml
crates/hermes-core/src/: accumulator.rs  commands.rs  compaction_strategy.rs  context_engine.rs  error.rs  home.rs  lib.rs  message.rs  platform.rs  prompt_context.rs  provider.rs  registry.rs  tool.rs  usage.rs  util.rs
crates/hermes-gateway/: Cargo.toml  README.md
crates/hermes-gateway/src/: adapter.rs  config.rs  event.rs  handler.rs  lib.rs  runner.rs
crates/hermes-gateway/src/qqbot/: adapter.rs  config.rs  events.rs  mod.rs
crates/hermes-gateway/src/telegram/: adapter.rs  config.rs  mod.rs
crates/hermes-gateway/tests/: session_lifecycle.rs
crates/hermes-loop/: Cargo.toml
crates/hermes-loop/src/: agent.rs  lib.rs
crates/hermes-loop/tests/: arg_validation.rs  echo_loop.rs  tool_dispatch.rs  usage_metrics.rs
crates/hermes-loop/tests/support/: mod.rs
crates/hermes-providers/: Cargo.toml
crates/hermes-providers/examples/: live_smoke.rs
crates/hermes-providers/src/: anthropic.rs  echo.rs  http.rs  lib.rs  openai.rs
crates/hermes-providers/src/anthropic/: mod.rs  request.rs  sse.rs
crates/hermes-providers/src/openai/: mod.rs  request.rs  sse.rs
crates/hermes-providers/tests/: anthropic.rs  openai.rs  openai_stream.rs  tool_call_roundtrip.rs
crates/hermes-runtime/: Cargo.toml
crates/hermes-runtime/examples/: live_tool_use.rs
crates/hermes-runtime/skills-example/rust-core-style/: SKILL.md
crates/hermes-runtime/src/: agent.rs  config.rs  lib.rs  prompting.rs  provider_factory.rs  tool_catalog.rs
crates/hermes-runtime/tests/: skills_injection.rs
crates/hermes-skill-loader/: Cargo.toml
crates/hermes-skill-loader/src/: frontmatter.rs  layout.rs  lib.rs
crates/hermes-skill-tools/: Cargo.toml
crates/hermes-skill-tools/src/: lib.rs  validate.rs
crates/hermes-skill-tools/src/tools/: bash.rs  linked_files.rs  mod.rs  process.rs  process_registry.rs  skill_create.rs  skill_list.rs  skill_view.rs  terminal.rs
crates/hermes-skill-tools/src/tools/files/: mod.rs  patch.rs  policy.rs  read.rs  search.rs  write.rs
crates/hermes-skill-tools/src/tools/memory/: mod.rs  store.rs  tool.rs
crates/hermes-skill-tools/tests/: bash.rs  files.rs  skills.rs
crates/hermes-skills/: Cargo.toml
crates/hermes-skills/src/: frontmatter.rs  layout.rs  lib.rs  validate.rs
crates/hermes-tools/: Cargo.toml
crates/hermes-tools/src/: bash.rs  lib.rs
crates/hermes-tools/tests/: bash.rs
crates/perry-hermes-gateway/: Cargo.toml
crates/perry-hermes-gateway/src/: adapter.rs  config.rs  event.rs  lib.rs  runner.rs  session_registry.rs
docs/: tooling-alignment.md
docs/history/: hermes-comparison.md  rust-port-design.md
docs/superpowers/plans/: 2026-06-05-phase-9-config-file.md  2026-06-05-phase-9-skills-loading.md  2026-06-05-phase5-6-streaming-interrupt.md  2026-06-05-split-large-files.md  2026-06-05-unify-runtime-config.md  2026-06-06-architecture-cohesion-refactor.md  2026-06-06-crate-consolidation.md  2026-06-06-phase-10-rename-and-tui.md  2026-06-06-phase-12-skill-view-tool-design.md  2026-06-06-phase-7-context-compression-refactor.md  2026-06-07-dead-code-and-redundancy-cleanup.md  2026-06-07-phase-10-tui-polish.md  2026-06-07-readability-and-maintainability.md  2026-06-08-gateway-and-telegram-adapter.md  2026-06-08-tool-contract-alignment.md  2026-06-09-gateway-session-lifecycle.md  2026-06-09-qqbot-gateway-adapter.md  2026-06-09-test-fixture-cleanup.md  2026-06-10-prompt-context-block.md  2026-06-12-agent-skill-create.md
docs/superpowers/specs/: 2026-06-05-phase-8-anthropic-provider-design.md  2026-06-05-phase-9-config-and-skills-design.md  2026-06-05-phase-9-skills-loading-design.md  2026-06-05-phase5-6-streaming-interrupt-design.md  2026-06-05-split-large-files-design.md  2026-06-05-unify-runtime-config-design.md  2026-06-06-architecture-cohesion-refactor-design.md  2026-06-06-builtin-tools-expansion-design.md  2026-06-06-crate-consolidation-design.md  2026-06-06-failed-turn-history-retention-design.md  2026-06-06-phase-10-rename-and-tui-design.md  2026-06-06-phase-7-context-compression-design.md  2026-06-07-dead-code-and-redundancy-cleanup-design.md  2026-06-07-phase-10-tui-polish-design.md  (+7 more)
examples/: README.md
examples/config/: hermes.toml  perry_hermes.toml
plans/: graniet-llm-eval.md  hermes-comparison.md  rust-port-design.md
(+4 files in other folders)
