[workspace]
resolver = "2"
members = [
    "crates/hermes-agent",
    "crates/hermes-core",
    "crates/hermes-providers",
    "crates/hermes-skills",
    "crates/hermes-cli",
    # "crates/hermes-gateway",  # phase 11+
    # "crates/hermes-tui",      # phase 10+
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Async
async-stream = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON Schema validation (used by hermes-loop at dispatch time)
jsonschema = "0.18"

# CLI
clap = { version = "4", features = ["derive"] }

# Temp dir (dev)
tempfile = "3"

# HTTP (used by hermes-providers)
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"

# HTTP mock server (dev-dep on hermes-providers)
httpmock = "0.7"

# Time
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
chrono-tz = "0.10"

# Internal
hermes-agent = { path = "crates/hermes-agent" }
hermes-core = { path = "crates/hermes-core" }
hermes-providers = { path = "crates/hermes-providers" }
