[workspace]
resolver = "2"
members = [
    "crates/hermes-agent",
    "crates/hermes-core",
    "crates/hermes-providers",
    "crates/hermes-skill-tools",
    "crates/hermes-cli",
    "crates/hermes-gateway",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.dependencies]
# Async
async-stream = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"

# JSON Schema validation for tool dispatch
jsonschema = "0.18"

# CLI
clap = { version = "4", features = ["derive"] }

# Temp dir (dev)
tempfile = "3"

# HTTP (used by perry-hermes-providers)
reqwest = { version = "0.13", features = ["json", "stream"] }
bytes = "1"

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Concurrent map
dashmap = "6"

# HTTP mock server (dev-dep on perry-hermes-providers)
httpmock = "0.7"

# Time
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
chrono-tz = "0.10"

# QQ Bot SDK (rev pinned; v0.1.0 is pre-stable)
qq-bot-rs = { git = "https://github.com/yenharvey/qq-bot-rs", rev = "ab82963129aa682073b38288933f6a6b85a2f91e" }
tokio-tungstenite = "0.29"
bitflags = { version = "2", features = ["serde"] }

# Internal
perry-hermes-agent = { path = "crates/hermes-agent" }
perry-hermes-core = { path = "crates/hermes-core" }
perry-hermes-gateway = { path = "crates/hermes-gateway" }
perry-hermes-skill-tools = { path = "crates/hermes-skill-tools" }
perry-hermes-providers = { path = "crates/hermes-providers" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
