[package]
name = "perry-hermes-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Consolidated agent runtime engine and built-in tools"

[dependencies]
perry-hermes-core.workspace = true
perry-hermes-providers.workspace = true
perry-hermes-skill-loader = { path = "../hermes-skill-loader" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "live_tool_use"
path = "examples/live_tool_use.rs"
