[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hermes CLI — a minimal Hermes-style agent in Rust"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
hermes-core.workspace = true
hermes-agent.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
