[package]
name = "hermes-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hermes CLI — a minimal Hermes-style agent in Rust"
repository = "https://github.com/AMagicPear/perry_hermes"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
hermes-core.workspace = true
hermes-agent.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
unicode-width = "0.2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
ratatui = "0.29"
async-trait = "0.1"
futures = "0.3"
