[package]
name = "perry-hermes-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Perry Hermes CLI"
repository = "https://github.com/AMagicPear/perry_hermes"

[[bin]]
name = "perry-hermes"
path = "src/main.rs"

[dependencies]
perry-hermes-core.workspace = true
perry-hermes-agent.workspace = true
perry-hermes-gateway.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-util.workspace = true
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
unicode-width = "0.2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
ratatui = "0.29"
async-trait = "0.1"
futures = "0.3"
