[package]
name = "hermes-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and traits for the Hermes agent loop"

[dependencies]
async-trait.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
# Needed for `#[from] reqwest::Error` in ProviderError.
# This is the design doc's choice — keeps the `?` operator ergonomic at the
# provider/loop boundary, at the cost of pulling reqwest into the core lib.
reqwest.workspace = true