[package]
name = "perry-hermes-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and traits for Perry Hermes"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tempfile.workspace = true

[dependencies]
async-trait.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
