[package]
name = "perry-hermes-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform gateway for Perry Hermes — session management and multi-platform adapter dispatch"

[dependencies]
perry-hermes-agent.workspace = true
perry-hermes-core.workspace = true

async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

teloxide.workspace = true

qq-bot-rs.workspace = true

[dev-dependencies]
perry-hermes-providers.workspace = true
tempfile.workspace = true
