[package]
name = "hermes-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The agent loop — assembles context, calls the LLM, dispatches tools"

[dependencies]
hermes-core.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Integration tests use these to compose a real Provider + AgentLoop.
hermes-providers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
