[package]
name = "hermes-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The agent loop — assembles context, calls the LLM, dispatches tools"

[dependencies]
hermes-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
futures.workspace = true

[dev-dependencies]
# Integration tests use these to compose a real Provider + AgentLoop +
# BashTool and observe the full dispatch flow.
hermes-providers.workspace = true
hermes-tools.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
