[package]
name = "hermes-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider implementations (echo mock, OpenAI, Anthropic, ...)"

# Stub for phase 0. See plans/rust-port-design.md §6 (roadmap):
#   phase 1 → EchoProvider
#   phase 2 → OpenAiProvider
#   phase 8 → Anthropic provider
#   phase 11+ → gateway-facing providers