[package]
name = "hermes-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider implementations (echo mock, OpenAI, Anthropic, ...)"

[dependencies]
hermes-core.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
bytes.workspace = true

[dev-dependencies]
httpmock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-util.workspace = true
futures.workspace = true
