[package]
name = "hermes-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "User-facing AIAgent facade — the product API"

[dependencies]
# Runtime is the composition point — it depends on the loop, providers,
# and tools so it can wire them together. See plans/rust-port-design.md §5.
hermes-core.workspace = true
hermes-loop.workspace = true
hermes-providers.workspace = true
hermes-tools.workspace = true
hermes-skills = { path = "../hermes-skills" }
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[example]]
name = "live_tool_use"
path = "examples/live_tool_use.rs"
