[package]
name = "perry-hermes-skill-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Skill system and built-in tools for Perry Hermes"

[dependencies]
perry-hermes-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
fs2 = "0.4"
libc.workspace = true
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json.workspace = true
tempfile = "3"
thiserror = "2"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
