[package]
name = "hermes-skills"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Skill loading and system-prompt injection for Hermes"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml = "0.9"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"