[package]
name = "hermes-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Built-in tool implementations (bash, file ops, ...)"

# Stub for phase 0. See plans/rust-port-design.md §6 (roadmap):
#   phase 3 → BashTool
#   later → ReadTool, WriteTool, EditTool, WebSearchTool, ...